# WpWebSolucoes

./: .gitignore  _deploy.sh  deploy.sh  dont_use__deploy.sh  dont_use_deploy.sh  git-webhook.py  main.py  main_api.py  pyproject.toml  supervisor.conf
static/css/: chat.css  responsive.css  styles.css
static/js/: chat-ia.js  chat-websocket.js
templates/: 404.html  base.html  index.html
