[project]
name = "wpwebsolucoes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.2",
    "jinja2>=3.1.6",
    "pydantic[all]>=2.12.3",
    "pymongo>=4.15.3",
    "redis>=7.0.1",
    "uvicorn>=0.38.0",
]
